Chcec forms if there is a change, before page close

--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -19,6 +19,7 @@
 
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
+<script type="text/javascript" src="{$basePath}/js/jquery.are-you-sure.js"></script>
 <script type="text/javascript" src="{$basePath}/js/akce.js"></script>
 
 <script type="text/javascript" n:nonce>
@@ -26,8 +27,10 @@
 		baseDir: {$basePath}+'/texyla',
 		previewPath: {link texyPreview, TRUE}
 	});
+
 	$(function () {
 		$('#frm-akceForm-description').textareaAutoSize();
+		$('#frm-akceForm').areYouSure();
 	});
 </script>
 
