--- a/app/MemberModule/templates/User.edit.latte
+++ b/app/MemberModule/templates/User.edit.latte
@@ -17,10 +17,11 @@
 -->
 </style>
 
-<script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
-<script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery-ui.custom.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.ui.datepicker-cs.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>
 
-<script type="text/javascript" n:nonce>
+	<script type="text/javascript" n:nonce>
 	$(function() {		
 		var elem = document.createElement('input');
       	elem.setAttribute('type', 'date');
@@ -28,6 +29,8 @@
       	if ( elem.type === 'text' ) {
 			$('.date').datepicker();
 		}
+
+		$('#frm-memberForm').areYouSure();
 	});
 </script>
 {/block}
