Space between names

--- a/app/MemberModule/templates/User.default.latte
+++ b/app/MemberModule/templates/User.default.latte
@@ -1,8 +1,8 @@
 {block #head}
 	<style type="text/css" n:syntax="off">
 		#text { padding-top: 1ex}
-		.userList li, #members { list-style-type: none;}
 		.userList { margin-left: 2em; padding-left: 0;}
+		.userList li { list-style-type: none; margin-bottom: 1ex;}
 		#frm-memberSearchForm-search { font-size: 2ex; padding: 0.5ex 1ex; vertical-align: middle;}
 		#frm-memberSearchForm-ok { height: 5ex;}
 		#frm-memberSearchForm div { display: inline;}
