--- a/app/MemberModule/templates/Akce.edit.latte
+++ b/app/MemberModule/templates/Akce.edit.latte
@@ -65,7 +65,7 @@ uvidí ji na webu pouze její organizatoři. Dokončením tohoto formuláře se 
 
 <p>{label akce_for_id /}{input akce_for_id} <span class="no-wrap">{input visible} {label visible /}</span></p>
 
-<p>{label member_id /}{input member_id}
+<p>{label user_id /}{input user_id}
 <span class="no-wrap" n:if="isset($form['organizator'])">{label organizator /}{input organizator}</span></p>
 
 <p>{label forum_topic_id /}{input forum_topic_id} <span class="no-wrap">{label anketa_id /}{input anketa_id}</span>
