--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -91,7 +91,7 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 {block}        
 {foreach $akce->related('akce_member', 'akce_id')->where('organizator', TRUE) as $org}
 
-{var $organizator = $org->ref('user', 'member_id')}
+{var $organizator = $org->ref('user', 'user_id')}
 {if $organizator}{$organizator->surname} {$organizator->name}{sep}, {/sep}{/if}
 {/foreach}{/block}</td><td></td></tr>
 </table>
