--- a/app/MemberModule/templates/Ankety.default.latte
+++ b/app/MemberModule/templates/Ankety.default.latte
@@ -23,19 +23,19 @@ table#items .first { font-size: 1.1em;}
 {foreach $ankety as $item}
 	{var $post = $item->related('anketa_member','anketa_id')->order('date_add DESC')->fetch()}
 	
-	{if $post}{var $member = $post->ref('member')}{else}{var $member = 0}{/if}
+	{if $post}{var $member = $post->ref('user')}{else}{var $member = 0}{/if}
 	
 	<tr n:class="borderLike,hoverLike,$item->date_add > $user->getIdentity()->date_last ? 'new', 
-	$item->member_id == $user->getId() ? logged">
-	{*(($post)and($post->member_id == $user->getId())) ? logged*}
+	$item->user_id == $user->getId() ? logged">
+	{*(($post)and($post->user_id == $user->getId())) ? logged*}
 	<td class="col"><a class="noLink" title="{$item->title}{if $item->locked} (uzamčeno){/if}" n:href="Ankety:view,$item->id"><div>
 	<strong class="headerLike">
 		{if $item->locked}{include svg lock}{/if}
 		{$item->title|firstUpper}
 	</strong>
-	<span class="no-wrap"> {$item->member->surname} {$item->member->name}</span>
+	<span class="no-wrap"> {$item->user->surname} {$item->user->name}</span>
 	</div></a></td>
-	<td class="center">{$item->related('anketa_member','anketa_id')->count('member_id')}</td>
+	<td class="center">{$item->related('anketa_member','anketa_id')->count('user_id')}</td>
 	<td class="col">
 	 
 	<div class="right" n:if="$post">
