--- a/app/MemberModule/templates/Feed.akce.latte
+++ b/app/MemberModule/templates/Feed.akce.latte
@@ -5,7 +5,7 @@
 <description>Akce VZS Jablonec</description>
 <item n:foreach="$items as $item">
 	<title>{$item->name|firstUpper}</title>	
-	{var $member = $item->member}
+	{var $member = $item->user}
 	<author>{if $member}{$member->mail} ({$member->surname} {$member->name}{else} info@vzs-jablonec.cz (VZS Jablonec){/if})</author>
 	<link>{link //Akce:view $item->id}</link>
 	<guid isPermaLink="false">{$item->id}@{link Akce:default}</guid>
