--- a/app/MemberModule/templates/Feed.hlasovani.latte
+++ b/app/MemberModule/templates/Feed.hlasovani.latte
@@ -5,7 +5,7 @@
 <description>Hlasování představenstva MS VZS Jablonec</description>
 <item n:foreach="$items as $item">
 	<title>{$item->title}</title>	
-	{var $member = $item->member}
+	{var $member = $item->user}
 	{* <dc:creator>{$member->surname} {$member->name}</dc:creator> *}
 	<author>{$member->mail} ({$member->surname} {$member->name})</author>
 	<link>{link //Hlasovani:view,$item->id}</link>
