--- a/app/MemberModule/components/RatingControl.latte
+++ b/app/MemberModule/components/RatingControl.latte
@@ -7,7 +7,7 @@
 			document.getElementById('rating-edit-sign').classList.add('hide');
 			document.getElementById('rating-edit-area').classList.remove('hide');
 
-			document.getElementById('rating-'+id).classList.add('hide');
+			document.getElementById('rating/'+id).classList.add('hide');
 		});
 	});
 </script>
