--- a/app/PhotoModule/templates/Myself.default.latte
+++ b/app/PhotoModule/templates/Myself.default.latte
@@ -42,7 +42,7 @@ ul { list-style: disc;}
 {if}<h3>Fotografie</h3>
 <ul n:inner-foreach="$newPhotos as $album">
   <li><a n:href="Album:view,$album->id.'-'.$album->slug">{$album->name}</a>
-    <ul n:inner-foreach="$album->related('photo.album_id')->where('date_add > ?',$date_last)->limit(15) as $image">
+    <ul n:inner-foreach="$album->related('album_photo.album_id')->where('date_add > ?',$date_last)->limit(15) as $image">
       <li><a n:href="Album:view#$image->filename,$album->id.'-'.$album->slug">{$image->filename}</a></li>
       {if $iterator->counter == 15}
         <li><a n:href="Album:view $album->id.'-'.$album->slug">Další ...</a></li>
