--- a/app/PhotoModule/templates/Album.add.latte
+++ b/app/PhotoModule/templates/Album.add.latte
@@ -27,5 +27,5 @@ a proto se budou nahrávat dlouho.</p>
 
 {control plupload}
 
-<p><a n:href="view,$slug">← Zpět na album</a></p>
+<p><a n:href="view $slug">← Zpět na album</a></p>
 {/block}
