--- a/app/PhotoModule/templates/News.default.latte
+++ b/app/PhotoModule/templates/News.default.latte
@@ -43,7 +43,7 @@
 	<ul id="js-slides" class="slides-container" n:inner-foreach="$photos as $image">
 	<li><div class="slide">
 		{var $album = $image->ref('album')}
-		<a n:href="Album:view#$image->filename,$album->id.'-'.$album->slug" title="{$album->name}">
+		<a n:href="Album:view#$image->filename $album->slug" title="{$album->name}">
 		<img src="{$baseUrl}/{$photoDir.'/'.$image->album_id.'/'.$image->filename}" alt="{$image->filename}" class="spinner">
 		</a>
 	</div></li>
