Added submit button for compatibility with are-you-sure.js

--- a/app/MemberModule/templates/Mail.add.latte
+++ b/app/MemberModule/templates/Mail.add.latte
@@ -85,7 +85,7 @@ input.buttonLike:active { background-color: #da251c; color: white; background-im
 <tr><th colspan="2">{label text /}</th></tr>
 <tr><td colspan="2">{input text}</td></tr>
 </table>
-{*<p>{input ok}</p>*}
+<p>{input ok}</p>
 {/form}
 
 {/block}
