Remove are-you-sure.js due to incompability with current setting of Texyla

--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -12,7 +12,7 @@
 
 <script type="text/javascript" src="{$baseUrl}/js/confirm.js"></script>
 <script type="text/javascript" src="{$baseUrl}/js/jquery.textarea_autosize.min.js"></script>
-<script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>
+{*<script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>*}
 
 <script type="text/javascript" n:nonce>
 	$.texyla.setDefaults({
@@ -21,7 +21,7 @@
 	});
 
 	$(function () {
-		$('#frm-addPostForm').areYouSure();
+		// $('#frm-addPostForm').areYouSure();
 		$('.texyla').textareaAutoSize();
 		$('.texyla').texyla(forum);
 	});
