Rating textarea autosize.js

--- a/app/MemberModule/components/RatingControl.latte
+++ b/app/MemberModule/components/RatingControl.latte
@@ -8,6 +8,8 @@
 			document.getElementById('rating-edit-area').classList.remove('hide');
 
 			document.getElementById('rating/'+id).classList.add('hide');
+
+			$('#frm-rating-ratingForm-message').textareaAutoSize();
 		});
 	});
 </script>
