--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -21,9 +21,13 @@
     .prev-next { margin-bottom: 1em;}
     hr { border: none; border-top: 1px solid #ccc; }
 
+    textarea { min-height: 1em; box-sizing: border-box; padding: 1ex; }
+
 </style>
 <script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
 <script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>
+<script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
+
 {/block}
 
 <h1 n:block="title">Detail akce</h1>
