--- a/app/presenters/templates/Mail/restorePassword.latte
+++ b/app/presenters/templates/Mail/restorePassword.latte
@@ -4,4 +4,4 @@ Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
 
 Můžete si ho nastavit na adrese: {link //:Account:Sign:restorePassword pubkey => $session->pubkey}
 
-Tento odkaz bude fungovat do {$session->date_end|date:'H:i:s d.m.Y'}
+Tento odkaz bude fungovat po dobu 20 minut (do {$session->date_end|date:'H:i:s d.m.Y'})
