--- a/app/MemberModule/templates/News.default.latte
+++ b/app/MemberModule/templates/News.default.latte
@@ -55,7 +55,7 @@
 
 	{if}<h3>Alba</h3>
 		<ol class="news" n:inner-foreach="$albumList as $album">
-			<li><a n:class="$album->user_id == $user->getId() ? logged" n:href=":Photo:Album:view, $album->id.'-'.$album->slug"
+			<li><a n:class="$album->user_id == $user->getId() ? logged" n:href=":Photo:Album:view, $album->slug"
 						title="{$album->date_add|timeAgoInWords}">{$album->name}</a></li>
 		</ol>
 	{/if isset($album)}
