Image class for work with images, base on Imagic php extention which uses Image magic linux libraly

--- a/app/PhotoModule/templates/Album.add.latte
+++ b/app/PhotoModule/templates/Album.add.latte
@@ -20,8 +20,7 @@
 <h2 n:block="title">{$album->name}</h2>
 
 <p>Nejprve vyberte fotky, co chcete nahrát pomocí tlačítka <b>Přidat soubory</b>. Poté tlačítem <b>Spusti nahrávání</b> 
-začněte nahrávat fotky. Nahrané fotografie se nezmenšují. Neupravené fotky přímo z foťáku jsou obvykle nesmylsně velké, mají velkou datovou velikost 
-a proto se budou nahrávat dlouho.</p>
+začněte nahrávat fotky. Nahrané nadměrné fotografie (nad 2 MB) se zmenšují a automaticky otáčejí.</p>
 
 <p>Až bude celé nahrávání dokončeno, můžete se vrátit na stránku alba pomocí odkazu <b>Zpět na album</b>.</p>
 
