--- a/app/AccountModule/templates/Sign.restorePassword.latte
+++ b/app/AccountModule/templates/Sign.restorePassword.latte
@@ -2,6 +2,6 @@
   <article>
   {control restorePasswordForm}
 
-    <p>Tento okaz bude platný přesně do <time datetime="{$date_end|datetimeC}">{$date_end|datetime'}</time> (zbývá {$time_remain|date:'H:i:s'})</p>
+    <p>Tento okaz bude platný přesně do <time datetime="{$date_end|datetimeC}">{$date_end|datetime}</time> (zbývá {$time_remain|date:'%H:%i:%s'})</p>
   </article>
 {/block}
