--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -130,13 +130,13 @@
 			{include svg envelope} <b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a>
 		</li>
 		<li n:if="$member->telefon">
-			{include svg phone} <b>Telefon:</b> {$member->telefon|number:0:'.':' '}
+			{include svg phone} <b>Telefon:</b> <a href="tel:+420{$member->telefon}">{$member->telefon|phone}</a>
 		</li>
 		<li n:if="$member->mail2">
 			{include svg envelope-o} <b>Sekundární e-mail:</b> <a href="mailto:{$member->mail2}">{$member->mail2}</a>
 		</li>
 		<li n:if="$member->telefon2">
-			{include svg phone-square} <b>Sekundární telefon:</b> {$member->telefon2|number:0:'.':' '}
+			{include svg phone-square} <b>Sekundární telefon:</b> <a href="tel:+420{$member->telefon2}">{$member->telefon2|phone}</a>
 		</li>
 	</ul>
 
