--- a/app/PhotoModule/templates/Sign.default.latte
+++ b/app/PhotoModule/templates/Sign.default.latte
@@ -4,7 +4,10 @@
 	{if $user->isLoggedIn()}
 		<p>Aktuálně jste přihlášen.</p>
 	{else}
-		<p>Aktuálně nejste přihlášen. <span n:if="$presenter->action == out">Pokud se odhlašujete na cizím počítači, odhlašte se raději i z <a n:href=":Account:Sign:">vašeho účtu.</a></span></p>
+		<p>Aktuálně nejste přihlášen.
+			<span n:if="$backlink">Možná se něco pokazilo při přihlášení, zkuste <strong>obnovit stránku</strong> (F5).</span>
+			<span n:if="$presenter->action == out">Pokud se odhlašujete na cizím počítači, odhlašte se raději i z <a n:href=":Account:Sign:">vašeho účtu.</a></span>
+		</p>
 	{/if}
 {/block}
   
