Refresh sign page after 3 seconds when there is backlink

--- a/app/MemberModule/templates/Sign.default.latte
+++ b/app/MemberModule/templates/Sign.default.latte
@@ -1,8 +1,10 @@
 {block #head}
-<style type="text/css" n:syntax="off">
-	#menu { display: none; }
-	#text { margin-left: 0; }
-</style>
+<meta n:if="$backlink" http-equiv="refresh" content="3">
+
+	<style type="text/css" n:syntax="off">
+		#menu { display: none; }
+		#text { margin-left: 0; }
+	</style>
 {/block}
 
 <h1 n:block="title">Přihlášení</h1>
