--- a/app/PhotoModule/templates/Sign.default.latte
+++ b/app/PhotoModule/templates/Sign.default.latte
@@ -1,3 +1,7 @@
+{block #head}
+	<meta n:if="$backlink" http-equiv="refresh" content="3">
+{/block}
+
 {block #content}
 
 <h2 n:block="title">Přihlášení</h2>
