--- a/www/subdom/member/css/member.css
+++ b/www/subdom/member/css/member.css
@@ -62,6 +62,7 @@ div#texyPreview.texy {border: none; padding: 0;}
 
 #text .texy h1 {font-size: 1.5em; text-transform: uppercase;}
 #text .texy h1, #text .texy h2, #text .texy h3, #text .texy h4 {margin-bottom: 0;}
+#text .texy img { max-width: 100% }
 
 .buttonMenu {padding: 0; text-align: right;}
 .buttonMenu li {float: right; display: inline; list-style-type: none; margin-left: 1ex; margin-bottom: 1ex;}
