--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -50,7 +50,7 @@
 		{include #title}
 	</div>
 
-	<ul id="menu" n:inner-foreach="$mainMenu as $item">
+	<ul n:ifset="$mainMenu" id="menu" n:inner-foreach="$mainMenu as $item">
 		<li n:if="$user->isInRole($item->role)" n:class="$presenter->isLinkCurrent($item->current) ? current">
 			<a n:href="$item->link" {if $iterator->last}target="_blank"{/if}>
 				{include svg $item->icon} {$item->title}
