--- a/app/MemberModule/templates/Sign.default.latte
+++ b/app/MemberModule/templates/Sign.default.latte
@@ -15,7 +15,7 @@
 	{else}
 		<p class="center">Aktuálně nejste přihlášen.
 			<span n:if="$backlink">Možná se něco pokazilo při přihlášení, zkuste <strong>obnovit stránku</strong> (F5).</span>
-			<span n:if="$presenter->action == out" class="center">Pokud se odhlašujete na cizím počítači, odhlašte se raději i z <a n:href=":Account:Sign:">vašeho účtu.</a></span>
+			<span n:if="$logout" class="center">Pokud se odhlašujete na cizím počítači, odhlašte se raději i z <a n:href=":Account:Sign:">vašeho účtu.</a></span>
 		</p>
 	{/if}
 {/block}
