--- a/app/PhotoModule/templates/Sign.default.latte
+++ b/app/PhotoModule/templates/Sign.default.latte
@@ -10,7 +10,7 @@
 	{else}
 		<p>Aktuálně nejste přihlášen.
 			<span n:if="$backlink">Možná se něco pokazilo při přihlášení, zkuste <strong>obnovit stránku</strong> (F5).</span>
-			<span n:if="$presenter->action == out">Pokud se odhlašujete na cizím počítači, odhlašte se raději i z <a n:href=":Account:Sign:">vašeho účtu.</a></span>
+			<span n:if="$logout">Pokud se odhlašujete na cizím počítači, odhlašte se raději i z <a n:href=":Account:Sign:">vašeho účtu.</a></span>
 		</p>
 	{/if}
 {/block}
