--- a/app/MemberModule/templates/Feed.albums.latte
+++ b/app/MemberModule/templates/Feed.albums.latte
@@ -6,7 +6,7 @@
 <item n:foreach="$items as $item">
 	<title>{$item->name}</title>	
 	<author>{if $item->user}{$item->user->mail} ({$item->user->surname} {$item->user->name}{else} info@vzs-jablonec.cz (VZS Jablonec){/if})</author>
-	<link>{link //:Photo:Album:view $item->id.'-'.$item->slug}</link>
+	<link>{link //:Photo:Album:view $item->slug}</link>
 	<guid isPermaLink="false">{$item->id}@{link //:Photo:Album:default}</guid>
 	<description>
 	{block|escape}
