Show message on the end of photo upload

--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -48,7 +48,10 @@
 </div>
 
 <div id="content">
+	{snippet flash}	
 	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+	{/snippet}
+	
 	{include #content}
 </div>
 
