--- a/app/PhotoModule/templates/Album.add.latte
+++ b/app/PhotoModule/templates/Album.add.latte
@@ -6,6 +6,8 @@
         #uploader-test { margin: 0 auto; width: 100% !important;}
     </style>
 
+	<script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>
+
     <script type="text/javascript" src="{$basePath}/js/jquery-ui-1.10.2.min.js"></script>
     {*<script type="text/javascript" src="{$basePath}/js/jquery-ui.min.js"></script>*}
 	{*<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>*}
