List start numbers + GDPR upadate

--- a/app/AccountModule/templates/Register.gdpr.latte
+++ b/app/AccountModule/templates/Register.gdpr.latte
@@ -3,6 +3,7 @@
 	#main { max-width: 40em;}
 	#content { text-align: justify;}
 	h2 { text-align: center;}
+	ol { padding-left: 2em;}
 </style>
 {/block}
 
@@ -71,7 +72,7 @@
 		<li>prezentace ve výroční zprávě a dalších informačních materiálech,</li>
 	</ul>
 
-	<ol>
+	<ol start="5">
 		<li>telefonní číslo,</li>
 		<li>e-mail,</li>
 		<li>rodné číslo,</li>
@@ -83,6 +84,16 @@
 	<ul>
 		<li>vedení evidence členské základny a s tím souvisejícími činnostmi (např. informování členské základny o činnosti, žádosti o dotace, vyřizování pojištění, apod.),</li>
 		<li>naplnění vyhlášky 391/2013 Sb. o zdravotní způsobilosti k tělesné výchově a sportu.</li>
+	</ul>
+
+	<ol start="9">
+		<li>korespondenční adresy, telefonní čísla a emaily zákonných zástupců,</li>
+	</ol>
+
+	<p>za účelem</p>
+
+	<ul>
+		<li>edení evidence členské základny a s tím souvisejícími činnostmi (např. informování zákonných zástupců členů o činnosti, apod.)</li>
 	</ul>
 
 	<p>Souhlasím, aby mé Osobní údaje byly zpracovávány a uchovávány po celou dobu trvání účelu zpracování (tedy i po tom, kdy přestanu vykonávat činnost, pro kterou jsem Správcem evidován).</p>
